--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="keywords" content="Roberto Duarte, Web, Designer, Engineer, Frontend, Fullstack, Developer, Buenos Aires, Argentina, Digital, Experience, Software, Solutions, Website, Interactive, Responsive, Modern, Maintainable, Code, Platforms, Frameworks, Fintech, Blockchain, E-commerce, Logistics, Business, Grow">
     <meta property="og:type" content="Portfolio">
     <meta property="og:title" content="Roberto Duarte | Fullstack Developer - Professional Web Designer">
-    <meta property="og:url" content="https://www.bbc.com/mundo/deportes-46502400">
+    <meta property="og:url" content="https://robfduarte.github.io/pre-entrega3/">
     <meta property="og:image" content="https://images.ole.com.ar/2020/12/08/Km4tY3UOS_1256x620__1.jpg">
     <title>Roberto Duarte | Fullstack Developer - Professional Web Designer</title>
     <!-- CDN Bootstrap-->
