--- a/index.html
+++ b/index.html
@@ -55,19 +55,19 @@
             <h4 class="home-text-second1"><small>PROFESSIONAL WEB DESIGNER</small></h4>
         </div>
         <div class="home-social">
-            <a href="https://www.linkedin.com" target="_blank" class="social-icons"><img
+            <a href="https://www.linkedin.com" target="_blank" class="social-icons"><img loading="lazy"
                     src="img/social/rsz_linkedin.webp" alt="Perfil Linkedin de Roberto Duarte"></a>
-            <a href="https://www.github.com" target="_blank" class="social-icons"><img src="img/social/rsz_github.webp"
+            <a href="https://www.github.com" target="_blank" class="social-icons"><img loading="lazy" loading="lazy" src="img/social/rsz_github.webp"
                     alt="Sitio Github de Roberto Duarte"></a>
-            <a href="https://www.twitter.com" target="_blank" class="social-icons"><img src="img/social/rsz_twitter.webp"
+            <a href="https://www.twitter.com" target="_blank" class="social-icons"><img loading="lazy" loading="lazy" src="img/social/rsz_twitter.webp"
                     alt="Perfil Twitter de Roberto Duarte"></a>
-            <a href="https://www.facebook.com" target="_blank" class="social-icons"><img
+            <a href="https://www.facebook.com" target="_blank" class="social-icons"><img loading="lazy" loading="lazy"
                     src="img/social/rsz_facebook.webp" alt="Perfil Facebook de Roberto Duarte"></a>
-            <a href="https://www.instagram.com" target="_blank" class="social-icons"><img
+            <a href="https://www.instagram.com" target="_blank" class="social-icons"><img loading="lazy" loading="lazy"
                     src="img/social/rsz_instagram.webp" alt="Perfil Instagram de Roberto Duarte"></a>
         </div>
         <div class="home-whatsapp">
-            <a href="https://wa.me/+5491165091218" target="_blank" class="social-icons1"><img
+            <a href="https://wa.me/+5491165091218" target="_blank" class="social-icons1"><img loading="lazy" loading="lazy"
                     src="img/social/rsz_whatsapp.webp" alt="Contacto via Whatsaap"></a>
         </div>
     </section>
@@ -88,7 +88,7 @@
     <!---- About Me---->
     <section id="aboutUs" class="aboutUs-container">
         <div class="about-img">
-            <img src="img/profile/rsz_profile-pic_color.webp" alt="Foto de perfil de Roberto Duarte">
+            <img loading="lazy" src="img/profile/rsz_profile-pic_color.webp" alt="Foto de perfil de Roberto Duarte">
         </div>
         <div class="about-text">
             <hx class="hx-heading">
@@ -232,37 +232,37 @@
 
         <div class="portofolio-images">
             <div class="portfolio-img">
-                <img src="img/portfolio/rsz_portfolio1.webp" alt="Imagen del Proyecto web 1 de Roberto Duarte" class="image">
+                <img loading="lazy" src="img/portfolio/rsz_portfolio1.webp" alt="Imagen del Proyecto web 1 de Roberto Duarte" class="image">
                 <div class="overlay">
                     <div class="text">View Project</div>
                 </div>
             </div>
             <div class="portfolio-img">
-                <img src="img/portfolio/rsz_portfolio2.webp" alt="Imagen del Proyecto web 2 de Roberto Duarte" class="image">
+                <img loading="lazy" src="img/portfolio/rsz_portfolio2.webp" alt="Imagen del Proyecto web 2 de Roberto Duarte" class="image">
                 <div class="overlay">
                     <div class="text">View Project</div>
                 </div>
             </div>
             <div class="portfolio-img">
-                <img src="img/portfolio/rsz_portfolio3.webp" alt="Imagen del Proyecto web 3 de Roberto Duarte" class="image">
+                <img loading="lazy" src="img/portfolio/rsz_portfolio3.webp" alt="Imagen del Proyecto web 3 de Roberto Duarte" class="image">
                 <div class="overlay">
                     <div class="text">View Project</div>
                 </div>
             </div>
             <div class="portfolio-img">
-                <img src="img/portfolio/rsz_portfolio4.webp" alt="Imagen del Proyecto web 4 de Roberto Duarte" class="image">
+                <img loading="lazy" src="img/portfolio/rsz_portfolio4.webp" alt="Imagen del Proyecto web 4 de Roberto Duarte" class="image">
                 <div class="overlay">
                     <div class="text">View Project</div>
                 </div>
             </div>
             <div class="portfolio-img">
-                <img src="img/portfolio/rsz_portfolio5.webp" alt="Imagen del Proyecto web 5 de Roberto Duarte" class="image">
+                <img loading="lazy" src="img/portfolio/rsz_portfolio5.webp" alt="Imagen del Proyecto web 5 de Roberto Duarte" class="image">
                 <div class="overlay">
                     <div class="text">View Project</div>
                 </div>
             </div>
             <div class="portfolio-img">
-                <img src="img/portfolio/rsz_portfolio6.webp" alt="Imagen del Proyecto web 6 de Roberto Duarte" class="image">
+                <img loading="lazy" src="img/portfolio/rsz_portfolio6.webp" alt="Imagen del Proyecto web 6 de Roberto Duarte" class="image">
                 <div class="overlay">
                     <div class="text">View Project</div>
                 </div>
@@ -287,42 +287,42 @@
             </div>
             <div class="carousel-inner">
                 <div class="carousel-item active">
-                    <img src="img/portfolio/rsz_portfolio1.webp" class="d-block w-100" alt="Imagen del Proyecto web 1 de Roberto Duarte">
+                    <img loading="lazy" src="img/portfolio/rsz_portfolio1.webp" class="d-block w-100" alt="Imagen del Proyecto web 1 de Roberto Duarte">
                     <div class="carousel-caption d-none d-md-block">
                         <h5>View Project</h5>
                         <p>Some representative information of the project.</p>
                     </div>
                 </div>
                 <div class="carousel-item">
-                    <img src="img/portfolio/rsz_portfolio2.webp" class="d-block w-100" alt="Imagen del Proyecto web 2 de Roberto Duarte">
+                    <img loading="lazy" src="img/portfolio/rsz_portfolio2.webp" class="d-block w-100" alt="Imagen del Proyecto web 2 de Roberto Duarte">
                     <div class="carousel-caption d-none d-md-block">
                         <h5>View Project</h5>
                         <p>Some representative information of the project.</p>
                     </div>
                 </div>
                 <div class="carousel-item">
-                    <img src="img/portfolio/rsz_portfolio3.webp" class="d-block w-100" alt="Imagen del Proyecto web 3 de Roberto Duarte">
+                    <img loading="lazy" src="img/portfolio/rsz_portfolio3.webp" class="d-block w-100" alt="Imagen del Proyecto web 3 de Roberto Duarte">
                     <div class="carousel-caption d-none d-md-block">
                         <h5>View Project</h5>
                         <p>Some representative information of the project.</p>
                     </div>
                 </div>
                 <div class="carousel-item">
-                    <img src="img/portfolio/rsz_portfolio4.webp" class="d-block w-100" alt="Imagen del Proyecto web 4 de Roberto Duarte">
+                    <img loading="lazy" src="img/portfolio/rsz_portfolio4.webp" class="d-block w-100" alt="Imagen del Proyecto web 4 de Roberto Duarte">
                     <div class="carousel-caption d-none d-md-block">
                         <h5>View Project</h5>
                         <p>Some representative information of the project.</p>
                     </div>
                 </div>
                 <div class="carousel-item">
-                    <img src="img/portfolio/rsz_portfolio5.webp" class="d-block w-100" alt="Imagen del Proyecto web 5 de Roberto Duarte">
+                    <img loading="lazy" src="img/portfolio/rsz_portfolio5.webp" class="d-block w-100" alt="Imagen del Proyecto web 5 de Roberto Duarte">
                     <div class="carousel-caption d-none d-md-block">
                         <h5>View Project</h5>
                         <p>Some representative information of the project.</p>
                     </div>
                 </div>
                 <div class="carousel-item">
-                    <img src="img/portfolio/rsz_portfolio6.webp" class="d-block w-100" alt="Imagen del Proyecto web 6 de Roberto Duarte">
+                    <img loading="lazy" src="img/portfolio/rsz_portfolio6.webp" class="d-block w-100" alt="Imagen del Proyecto web 6 de Roberto Duarte">
                     <div class="carousel-caption d-none d-md-block">
                         <h5>View Project</h5>
                         <p>Some representative information of the project.</p>
@@ -399,15 +399,15 @@
     <!---- Footer---->
     <footer class="footer-container">
         <div class="footer-social">
-            <a href="https://www.linkedin.com" target="_blank" class="social-icons"><img
+            <a href="https://www.linkedin.com" target="_blank" class="social-icons"><img loading="lazy"
                     src="img/social/rsz_linkedin.webp" alt="Perfil Linkedin de Roberto Duarte"></a>
-            <a href="https://www.github.com" target="_blank" class="social-icons"><img src="img/social/rsz_github.webp"
+            <a href="https://www.github.com" target="_blank" class="social-icons"><img loading="lazy" src="img/social/rsz_github.webp"
                     alt="Sitio Github de Roberto Duarte"></a>
-            <a href="https://www.twitter.com" target="_blank" class="social-icons"><img src="img/social/rsz_twitter.webp"
+            <a href="https://www.twitter.com" target="_blank" class="social-icons"><img loading="lazy" src="img/social/rsz_twitter.webp"
                     alt="Perfil Twitter de Roberto Duarte"></a>
-            <a href="https://www.facebook.com" target="_blank" class="social-icons"><img
+            <a href="https://www.facebook.com" target="_blank" class="social-icons"><img loading="lazy"
                     src="img/social/rsz_facebook.webp" alt="Perfil Facebook de Roberto Duarte"></a>
-            <a href="https://www.instagram.com" target="_blank" class="social-icons"><img
+            <a href="https://www.instagram.com" target="_blank" class="social-icons"><img loading="lazy"
                     src="img/social/rsz_instagram.webp" alt="Perfil Instagram de Roberto Duarte"></a>
         </div>
         <div class="footer-text">
