--- a/index.html
+++ b/index.html
@@ -357,11 +357,11 @@
             <nav class="contactUs-nav">
                 <form class="form-container">
                     <div class="form-details">
-                        <h5>Name</h5>
+                        <h5>Name:</h5>
                         <input type="text" class="form-input" placeholder="Enter Name *"><br><br>
-                        <h5>Email</h5>
+                        <h5>E-mail:</h5>
                         <input type="email" class="form-input" placeholder="Enter Email *"><br><br>
-                        <h5>Message</h5>
+                        <h5>Message:</h5>
                         <textarea class="form-input1" placeholder="Enter your message *"></textarea><br><br>
                         <input type="submit" value="Send Message" class="boton">
                     </div>
