--- a/index.html
+++ b/index.html
@@ -183,13 +183,13 @@
                         <div class="carousel-item">
                             <div class="experience-box d-block w-100 text-center">
                                 <h2 class="h2-heading">Blockchain</h2>
-                                <p class="p-experience">I design smart, in-demand blockchain solutions, delighting the client's audience with innovations in the blockchain industry. Putting end-users at the forefront and creating a high-end experience, I improve business metrics with designs.</p>
+                                <p class="p-experience">I design smart, in-demand blockchain solutions, delighting the client's audience with innovations in the industry. Putting end-users at the forefront and creating a high-end experience, I improve business metrics with designs.</p>
                             </div>
                         </div>
                         <div class="carousel-item">
                             <div class="experience-box d-block w-100 text-center">
                                 <h2 class="h2-heading">E-commerce</h2>
-                                <p class="p-experience">I design smart, in-demand e-commerce solutions, delighting the client's audience with innovations in the e-commerce sector. Putting end-users at the forefront and creating a high-end experience, I improve business metrics with designs.</p>
+                                <p class="p-experience">I design smart, in-demand e-commerce solutions, delighting the client's audience with innovations in the sector. Putting end-users at the forefront and creating a high-end experience, I improve business metrics with designs.</p>
                             </div>
                         </div>
                         <div class="carousel-item">
@@ -358,11 +358,11 @@
                 <form class="form-container">
                     <div class="form-details">
                         <h5>Name:</h5>
-                        <input type="text" class="form-input" placeholder="Enter Name *"><br><br>
+                        <input type="text" class="form-input" required placeholder="Enter Name *"><br><br>
                         <h5>E-mail:</h5>
-                        <input type="email" class="form-input" placeholder="Enter Email *"><br><br>
+                        <input type="email" class="form-input" required placeholder="Enter Email *"><br><br>
                         <h5>Message:</h5>
-                        <textarea class="form-input1" placeholder="Enter your message *"></textarea><br><br>
+                        <textarea class="form-input1" required placeholder="Enter your message *"></textarea><br><br>
                         <input type="submit" value="Send Message" class="boton">
                     </div>
                 </form>
