Curso JS - Entrega 01

--- a/index.html
+++ b/index.html
@@ -268,6 +268,10 @@
                 </div>
             </div>
         </div>
+
+        <div>
+            <hx class="hx-heading"><a href="./js_entrega1.html" target="_blank">Services cost estimation</a></hx>
+        </div>
         
         <!----Carousel solo para Mobile---->
         <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="false">
@@ -423,7 +427,6 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.min.js"
         integrity="sha384-7VPbUDkoPSGFnVtYi0QogXtr74QeVeeIs99Qfg5YCF+TidwNdjvaKZX19NZ/e6oz" crossorigin="anonymous">
     </script>
-
 
 </body>
 
