--- a/js_entrega1.html
+++ b/js_entrega1.html
@@ -5,11 +5,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Curso Coder JS - Entrega 01</title>
+    <title>Curso JS - Entrega 01</title>
     <script src="./js/entrega1.js"></script>
 </head>
 
 <body>
+
+    <h1>Curso Coderhouse JavaScript - Pre entrega 01</h1>
 
     <style>
         body {
